refactor resource quota
